re PR go/89598 (go frontend fails to build against mpfr 2.4.2)

PR go/89598
    compiler: use GMP_RNDN rather than MPFR_RNDN
    
    This fixes the build with mpfr 2.4.2.
    
    Fixes https://gcc.gnu.org/PR89598
    
    Reviewed-on: https://go-review.googlesource.com/c/gofrontend/+/165418

From-SVN: r269399